# liblanginfo

./: .gitignore  CMakeLists.txt  README.md  langinfo.c  langinfo.cpp  langinfo.h  liblanginfo.pc.in  liblanginfoConfig.cmake.in
